Revert the sprint boot version changes and junit4 to junit5 test changes